2008-12-12  Brent Fulgham  <bfulgham@gmail.com>

        Reviewed by Oliver Hunt.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=22805

        Provides implementation of image dragging logic for Windows Cairo
        back-end.

        * platform/win/DragImageCGWin.cpp:
        (WebCore::deallocContext): Add a generic CGContextRef destructor.
        * platform/win/DragImageCairoWin.cpp:
        (WebCore::deallocContext): Add a generic cairo_* destructor. 
        (WebCore::allocImage):  New implementation to allocate a Cairo
        surface of a specified size.
        (WebCore::createCairoContextFromBitmap): New implementation to
        create a Cairo surface from a Windows BITMAP.
        (WebCore::scaleDragImage): Replace stub with implementation to
        actually create a scaled image.
        (WebCore::createDragImageFromImage): Replace stub with implementation
        to actually create an image.

2008-12-12  Dean Jackson  <dino@apple.com>

        Reviewed by Darin Adler.

        Expose WebKitAnimationEvent, WebKitTransitionEvent,
        WebKitCSSTransformValue, WebKitCSSKeyframeRule and
        WebKitCSSKeyframesRule to Window object.
        This required generating constructors for the event
        interfaces.
        
        https://bugs.webkit.org/show_bug.cgi?id=20560

        * dom/WebKitAnimationEvent.idl:
        * dom/WebKitTransitionEvent.idl:
        * page/DOMWindow.idl:

2008-12-12  Dave Moore  <davemoore@google.com>

        Reviewed by Eric Seidel.

        Fixed https://bugs.webkit.org/show_bug.cgi?id=22798

        In Font::drawTextUsingSVGFont() a variable of type SVGTextRunWalkerDrawTextData
        is created on the stack (called data). One of its fields, charsConsumed, is
        unitialized, leading to random values after calling walk() on the
        SVGTextRunWalker created with it. I now initialize the variable

        This bug was revealed in our Purify run. I don't know of any specific incorrect