@@ -1,3 +1,10 @@
+2008-12-13  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx build fix.
+
+        * platform/graphics/wx/ImageSourceWx.cpp:
+        (WebCore::ImageSource::filenameExtension):
+
 2008-12-12  Brent Fulgham  <bfulgham@gmail.com>
 
         Reviewed by Oliver Hunt.
